--- a/src/style/header.css
+++ b/src/style/header.css
@@ -16,15 +16,14 @@
   height: 4vh;
 }
 
-.divider-2 {
-  background-color: #f2f2f2;
-  height: 2vh;
-}
-
 #button {
   padding-left: 20px !important;
   border-radius: 10px;
   font-size: 13px;
+  font-weight: 700;
+  width: 170px;
+  background-color: white;
+  border: 1px solid #dadada;
 }
 
 #button:hover {
