--- a/todo-app-react-redux/src/style/header.css
+++ b/todo-app-react-redux/src/style/header.css
@@ -5,7 +5,8 @@
   align-items: center;
 }
 
-.header-container h1 {
+.header-container h1,
+.name-heading {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 300;
@@ -34,4 +35,8 @@
 #button p {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.img-profile {
+  max-width: 55px;
 }
