--- a/todo-app-react-redux/src/style/body.css
+++ b/todo-app-react-redux/src/style/body.css
@@ -154,6 +154,7 @@ input.text-input:-moz-placeholder {
   font-weight: 300;
   max-width: 400px;
   width: 400px;
+  padding-bottom: 5px;
 }
 
 .bottom-container {
@@ -190,7 +191,7 @@ input.text-input:-moz-placeholder {
   }
   100% {
     width: 30%;
-    box-shadow: 10px 1px 20px #9198e5;
+    box-shadow: 0px 0px 0px #9198e500;
     opacity: 0;
   }
 }
@@ -347,8 +348,17 @@ input.text-input:-moz-placeholder {
     opacity: 0;
   }
 }
+@media screen and (max-width: 1160px) {
+  .icon-holder {
+    min-width: 63px !important;
+  }
+}
 
 @media screen and (max-width: 992px) {
+  .bottom-container {
+    padding: 0 10px;
+  }
+  
   .todo-text {
     max-width: 700px;
     width: 75%;
@@ -356,11 +366,27 @@ input.text-input:-moz-placeholder {
     overflow: scroll;
   }
 
+  .input-container {
+    width: 100% !important;
+  }
+
   .todo-class {
     width: 100%;
   }
 
   .todo-container2 {
-    width: 100%;
+    width: 75%;
+  }
+}
+@media screen and (max-width: 572px) {
+  .arrow-div {
+    height: 30px;
+    width: 30px;
+    padding: 0px;
+    transition: 0.2s;
+  }
+
+  .todo-container2 {
+    width: 95%;
   }
 }
