--- a/todo-app-react-redux/src/style/header.css
+++ b/todo-app-react-redux/src/style/header.css
@@ -187,16 +187,18 @@
   width: 130px;
   background-color: white;
   border: 1px solid #dadada;
+  box-shadow: 10px 10px 10px inset #ffffff, -10px -10px 10px inset #ffffff;
+  transition: 0.3s;
 }
 
 #button:hover {
-  color: white;
-  background-color: red;
+  box-shadow: 1px 1px 2px inset #4f4f4f, -1px -1px 2px inset #4f4f4f;
 }
 
 #button p {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #4b4b4b;
 }
 
 .img-profile {
