--- a/todo-app-react-redux/src/style/body.css
+++ b/todo-app-react-redux/src/style/body.css
@@ -152,9 +152,11 @@ input.text-input:-moz-placeholder {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 300;
-  max-width: 400px;
-  width: 400px;
-  padding-bottom: 5px;
+  max-width: 600px;
+  width: 100%;
+  font-size: 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .bottom-container {
@@ -162,8 +164,9 @@ input.text-input:-moz-placeholder {
 }
 
 .todo-container2 {
-  height: 60%;
-  width: 50%;
+  min-height: 370px;
+  width: 100%;
+  max-width: 522px;
   opacity: 1;
   transition: 500ms;
   border-radius: 25px;
@@ -223,7 +226,8 @@ input.text-input:-moz-placeholder {
 }
 
 .todo-container1 {
-  width: 85%;
+  width: 100%;
+  max-width: 414px;
 }
 
 .arrow-div {
@@ -283,6 +287,7 @@ input.text-input:-moz-placeholder {
 }
 
 .todo-class {
+  width: 100%;
   height: 50px;
   opacity: 1;
   position: relative;
@@ -306,6 +311,10 @@ input.text-input:-moz-placeholder {
 }
 .item-in {
   animation: item-in 500ms;
+}
+
+.icon-holder {
+  min-width: 63px !important;
 }
 
 @keyframes item-in {
@@ -348,34 +357,10 @@ input.text-input:-moz-placeholder {
     opacity: 0;
   }
 }
-@media screen and (max-width: 1160px) {
-  .icon-holder {
-    min-width: 63px !important;
-  }
-}
 
 @media screen and (max-width: 992px) {
-  .bottom-container {
-    padding: 0 10px;
-  }
-
-  .todo-text {
-    max-width: 700px;
-    width: 75%;
-    font-size: 15px;
-    overflow: scroll;
-  }
-
   .input-container {
     width: 100% !important;
-  }
-
-  .todo-class {
-    width: 100%;
-  }
-
-  .todo-container2 {
-    width: 75%;
   }
 }
 @media screen and (max-width: 572px) {
@@ -385,8 +370,14 @@ input.text-input:-moz-placeholder {
     padding: 0px;
     transition: 0.2s;
   }
+}
 
-  .todo-container2 {
-    width: 95%;
+@media screen and (max-width: 464px) {
+  .todo-container1 {
+    max-width: 300px;
+  }
+
+  .todo-class {
+    max-width: 230px;
   }
 }
