--- a/todo-app-react-redux/src/style/header.css
+++ b/todo-app-react-redux/src/style/header.css
@@ -1,9 +1,10 @@
 .header-container {
   display: grid;
-  grid-template-columns: 60% 40%;
-  height: 10vh;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  padding: 10px 0;
   align-items: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.342);
+  row-gap: 10px;
 }
 
 .border-ani {
@@ -199,6 +200,7 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #4b4b4b;
+  min-width: 51.4px;
 }
 
 .img-profile {
@@ -240,14 +242,6 @@
 }
 
 @media screen and (max-width: 992px) {
-  .header-container {
-    display: flex;
-    flex-flow: column;
-    height: 15vh;
-    justify-content: space-around;
-    align-items: center;
-  }
-
   .signIn-div {
     width: 100%;
     position: relative;
