--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -1,15 +1,54 @@
 .landing {
+  height: 100vh;
+  background: linear-gradient(to right, #f4f0ed 0%, #e0dcd9 50%, #f4f0ed 100%);
+}
+
+.hero {
   height: 70vh;
-}
-
-.landing_hero {
-  height: 100%;
-  background: linear-gradient(to left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8));
   z-index: 1;
+  display: grid;
+  grid-template-columns: max-content auto;
 }
 
-.landing_hero_BG {
+.hero_centered_image {
+  position: absolute !important;
+  width: 80%;
+  height: 80%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 75px;
+  margin: auto;
+  z-index: 0;
+  background-size: cover !important;
+}
+
+.header {
+  max-width: 100%;
+  height: 12vh;
+  padding: 0 250px;
+}
+
+.header_heading {
+  font-size: 20px;
+  font-weight: 700;
+  font-family: "Jura", sans-serif;
+  cursor: pointer;
+}
+
+.header_logo {
+  margin: 0 auto 0 0;
+}
+
+footer {
   max-width: 70%;
   margin: 0 auto;
-  z-index: 2;
+  height: 18vh;
+}
+
+.footer_links {
+  font-size: 16px;
+  font-weight: 700;
+  font-family: "Jura", sans-serif;
+  cursor: pointer;
 }
