--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -1,3 +1,21 @@
+.header {
+  max-width: 100%;
+  height: 12vh;
+  padding: 0 150px;
+}
+
+.header_heading {
+  font-size: 20px;
+  font-weight: 700;
+  font-family: "Jura", sans-serif;
+  cursor: pointer;
+  user-select: none;
+}
+
+.header_logo {
+  margin: 0 auto 0 0;
+}
+
 .landing {
   height: 100vh;
   background: linear-gradient(to right, #f4f0ed 0%, #e0dcd9 50%, #f4f0ed 100%);
@@ -7,7 +25,44 @@
   height: 70vh;
   z-index: 1;
   display: grid;
-  grid-template-columns: max-content auto;
+  padding: 0 150px;
+  grid-template-columns: auto max-content;
+}
+
+.hero_left {
+  max-width: 500px;
+}
+
+.hero_right,
+.hero_right h3 {
+  font-weight: 300;
+  font-family: "Jura", sans-serif !important;
+}
+
+.hero_right span {
+  position: relative;
+  left: 12px;
+}
+
+.hero_content {
+  font-family: "Jura", sans-serif;
+  width: 100%;
+  height: 250px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+
+.hero_content h2 {
+  font-family: "Orbitron", sans-serif !important;
+  font-weight: 400;
+  width: 100%;
+  font-size: 46px;
+}
+
+.hero_content div {
+  max-width: 250px;
+  width: 100%;
 }
 
 .hero_centered_image {
@@ -21,23 +76,6 @@
   margin: auto;
   z-index: 0;
   background-size: cover !important;
-}
-
-.header {
-  max-width: 100%;
-  height: 12vh;
-  padding: 0 250px;
-}
-
-.header_heading {
-  font-size: 20px;
-  font-weight: 700;
-  font-family: "Jura", sans-serif;
-  cursor: pointer;
-}
-
-.header_logo {
-  margin: 0 auto 0 0;
 }
 
 footer {
