--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -31,12 +31,18 @@
 
 .hero_left {
   max-width: 500px;
+  z-index: 1;
 }
 
 .hero_right,
 .hero_right h3 {
+  z-index: 1;
   font-weight: 300;
   font-family: "Jura", sans-serif !important;
+}
+
+.hero_right div {
+  cursor: pointer;
 }
 
 .hero_right span {
@@ -65,10 +71,10 @@
   width: 100%;
 }
 
-.hero_centered_image {
+.hero_center {
   position: absolute !important;
-  width: 80%;
-  height: 80%;
+  width: 70%;
+  height: 70%;
   left: 0;
   right: 0;
   top: 0;
@@ -76,6 +82,34 @@
   margin: auto;
   z-index: 0;
   background-size: cover !important;
+  opacity: 0.7;
+}
+
+.hero_center_image_div,
+.hero_center_backdrop_container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero_center_backdrop_container {
+  position: absolute !important;
+  width: 70%;
+  height: 70%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 75px;
+  margin: auto;
+  z-index: -1;
+}
+
+.hero_center_backdrop_1 {
+  width: 100px;
+  height: 100px;
+  background-color: #991fff;
 }
 
 footer {
