--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -22,11 +22,11 @@
 }
 
 .hero {
-  height: 70vh;
+  height: 88vh;
   z-index: 1;
   display: grid;
-  padding: 0 100px;
-  grid-template-columns: auto max-content;
+  padding: 50px 100px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .hero_left {
@@ -34,23 +34,7 @@
   z-index: 1;
 }
 
-.hero_right,
-.hero_right h3 {
-  z-index: 1;
-  font-weight: 300;
-  font-family: "Jura", sans-serif !important;
-}
-
-.hero_right div {
-  cursor: pointer;
-}
-
-.hero_right span {
-  position: relative;
-  left: 12px;
-}
-
-.hero_content {
+.hero_left_content {
   font-family: "Jura", sans-serif;
   max-width: 380px;
   width: 100%;
@@ -58,27 +42,77 @@
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
-  background: radial-gradient(
-    circle at 10% 50%,
-    rgba(0, 0, 0, 0.4),
+  background: linear-gradient(
+    to bottom,
+    transparent 0%,
+    rgba(0, 0, 0, 0.2) 20%,
+    rgba(0, 0, 0, 0.3) 70%,
     transparent
   );
   padding: 20px;
   border-radius: 30px;
+  outline: 8px solid #e0dcd978;
 }
 
-.hero_content h2 {
+.hero_left_content h2 {
   font-family: "Orbitron", sans-serif !important;
   font-weight: 400;
-  text-shadow: -10px -1px 30px rgba(0, 0, 0);
-  color: #e0dcd9;
+  text-shadow: -0px 0px 20px rgba(0, 0, 0);
+  color: white;
   width: 100%;
   font-size: 46px;
 }
 
-.hero_content div {
+.hero_left_content div {
   max-width: 250px;
   width: 100%;
+  color: white;
+  text-shadow: -0px 0px 20px rgba(0, 0, 0);
+}
+
+.hero_right {
+  background: linear-gradient(
+    to top,
+    transparent 0%,
+    rgba(0, 0, 0, 0.3) 20%,
+    rgba(0, 0, 0, 0.3) 70%,
+    transparent
+  );
+  border-radius: 20px;
+  padding: 10px;
+  max-width: 250px;
+  justify-self: flex-end;
+  outline: 8px solid #e0dcd9;
+}
+
+.hero_right,
+.hero_right h3 {
+  font-weight: 300;
+  font-family: "Jura", sans-serif !important;
+}
+
+.hero_right h3,
+.hero_right span {
+  position: relative;
+  z-index: 2;
+  color: #fff;
+  text-shadow: -10px -1px 30px rgba(0, 0, 0);
+}
+
+.hero_right span {
+  left: 12px;
+}
+
+.hero_right_tab {
+  cursor: pointer;
+  position: relative;
+}
+
+.hero_right_tab_bg {
+  position: absolute;
+  inset: 0;
+  z-index: 0;
+  background: radial-gradient(circle at 10% 20%, #991fff 30%, rgb(58, 58, 58));
 }
 
 .hero_center {
@@ -88,7 +122,7 @@
   left: 65px;
   right: 0;
   top: 0;
-  bottom: 60px;
+  bottom: 0;
   margin: auto;
   z-index: 0;
   background-size: cover !important;
@@ -141,14 +175,73 @@
   background: radial-gradient(circle at -10% 90%, #991fff 50%, black);
 }
 
-footer {
-  padding: 0 100px;
-  height: 18vh;
+@media screen and (max-width: 1050px) {
+  .hero_center,
+  .hero_center_image_div {
+    left: 0;
+  }
 }
 
-.footer_links {
-  font-size: 16px;
-  font-weight: 700;
-  font-family: "Jura", sans-serif;
-  cursor: pointer;
+@media screen and (max-width: 800px) {
+  .landing {
+    padding: 0 50px;
+  }
+
+  .header {
+    padding: 0;
+  }
+
+  .hero {
+    padding: 50px 0;
+    grid-template-columns: repeat(auto-fit, minmax(351px, 1fr));
+    gap: 50px;
+  }
+
+  .hero_right {
+    order: -1 !important;
+    flex-direction: row !important;
+    background: radial-gradient(
+      circle at 50% 50%,
+      #991fff 50%,
+      rgba(0, 0, 0, 0.8)
+    );
+    z-index: 2;
+  }
+
+  .hero_center {
+    top: 130px;
+    right: 50px;
+  }
+
+  .hero_left,
+  .hero_left_content,
+  .hero_right {
+    max-width: 100%;
+    width: 100%;
+  }
+
+  .hero_left_content {
+    background: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.7) 0%,
+      rgba(0, 0, 0, 0.5) 90%
+    );
+  }
+
+  .hero_center_backdrop_1,
+  .hero_center_backdrop_2 {
+    width: 150px;
+    height: 150px;
+  }
+}
+
+@media screen and (max-width: 602px) {
+  .hero_right,
+  .hero_right h3 {
+    font-size: 18px;
+  }
+
+  .hero_right span {
+    font-size: 15px;
+  }
 }
