--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -54,7 +54,7 @@
   outline: 8px solid #e0dcd978;
 }
 
-.hero_left_content h2 {
+.hero_left_content_heading {
   font-family: "Orbitron", sans-serif !important;
   font-weight: 400;
   text-shadow: -0px 0px 20px rgba(0, 0, 0);
@@ -138,6 +138,7 @@
 .hero_center_backdrop_container {
   width: 100%;
   height: 100%;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -146,8 +147,8 @@
 .hero_center_backdrop_container {
   position: absolute !important;
   width: 70%;
-  height: 75%;
   left: 100px;
+  max-height: 363px;
   right: 0;
   top: 0;
   bottom: -15px;
@@ -184,7 +185,7 @@
 
 @media screen and (max-width: 800px) {
   .landing {
-    padding: 0 50px;
+    padding: 0 20px;
   }
 
   .header {
@@ -192,13 +193,14 @@
   }
 
   .hero {
-    padding: 50px 0;
+    padding: 0;
     grid-template-columns: repeat(auto-fit, minmax(351px, 1fr));
-    gap: 50px;
+    gap: 100px;
+    align-items: first baseline;
   }
 
   .hero_right {
-    order: -1 !important;
+    /* order: -1 !important; */
     flex-direction: row !important;
     background: radial-gradient(
       circle at 50% 50%,
@@ -209,8 +211,8 @@
   }
 
   .hero_center {
-    top: 130px;
     right: 50px;
+    width: 100%;
   }
 
   .hero_left,
@@ -226,6 +228,20 @@
       rgba(0, 0, 0, 0.7) 0%,
       rgba(0, 0, 0, 0.5) 90%
     );
+    height: 250px;
+  }
+
+  .hero_center_backdrop_container {
+    left: 0;
+  }
+
+  .hero_center_backdrop_1 {
+    right: 65px;
+  }
+
+  .hero_center_backdrop_2 {
+    bottom: 0px;
+    right: -65px;
   }
 
   .hero_center_backdrop_1,
@@ -235,13 +251,26 @@
   }
 }
 
-@media screen and (max-width: 602px) {
+@media screen and (max-width: 424px) {
+  .hero {
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+  }
+
+  .hero_left_content_heading {
+    font-size: 26px;
+  }
+
+  .hero_left_content div {
+    font-size: 15px;
+  }
+
   .hero_right,
   .hero_right h3 {
-    font-size: 18px;
+    padding: 0;
+    font-size: 16px;
   }
 
   .hero_right span {
-    font-size: 15px;
+    font-size: 13px;
   }
 }
