--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -1,1 +1,23 @@
+.header {
+  max-width: 100%;
+  height: 12vh;
+  padding: 0 100px;
+}
 
+.header_heading {
+  font-size: 20px;
+  font-weight: 700;
+  font-family: "Jura", sans-serif;
+  cursor: pointer;
+  user-select: none;
+}
+
+.header_logo {
+  margin: 0 auto 0 0;
+}
+
+@media screen and (max-width: 800px) {
+  .header {
+    padding: 0;
+  }
+}
