--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -1,21 +1,3 @@
-.header {
-  max-width: 100%;
-  height: 12vh;
-  padding: 0 100px;
-}
-
-.header_heading {
-  font-size: 20px;
-  font-weight: 700;
-  font-family: "Jura", sans-serif;
-  cursor: pointer;
-  user-select: none;
-}
-
-.header_logo {
-  margin: 0 auto 0 0;
-}
-
 .landing {
   height: 100vh;
   background: linear-gradient(to right, #f4f0ed 0%, #e0dcd9 50%, #f4f0ed 100%);
@@ -63,7 +45,7 @@
   font-size: 46px;
 }
 
-.hero_left_content div {
+.hero_left_content_body {
   max-width: 250px;
   width: 100%;
   color: white;
@@ -188,10 +170,6 @@
     padding: 0 20px;
   }
 
-  .header {
-    padding: 0;
-  }
-
   .hero {
     padding: 0;
     grid-template-columns: repeat(auto-fit, minmax(351px, 1fr));
@@ -231,6 +209,10 @@
     height: 250px;
   }
 
+  .hero_left_content_body {
+    max-width: 350px;
+  }
+
   .hero_center_backdrop_container {
     left: 0;
   }
@@ -251,6 +233,13 @@
   }
 }
 
+@media screen and (max-width: 576px) {
+  .hero_right span {
+    font-size: 13px;
+    left: 8px;
+  }
+}
+
 @media screen and (max-width: 424px) {
   .hero {
     grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
@@ -268,9 +257,5 @@
   .hero_right h3 {
     padding: 0;
     font-size: 16px;
-  }
-
-  .hero_right span {
-    font-size: 13px;
   }
 }
