--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -5,9 +5,8 @@
 
 .hero {
   height: 88vh;
-  z-index: 1;
   display: grid;
-  padding: 50px 100px;
+  padding: 50px 79px;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   justify-content: center;
   align-items: center;
@@ -79,14 +78,13 @@
 
 .hero_right,
 .hero_right h3 {
-  font-weight: 300;
   font-family: "Jura", sans-serif !important;
 }
 
 .hero_right h3,
 .hero_right span {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   color: #fff;
   mix-blend-mode: plus-lighter !important;
   text-shadow: 4px 2px 10px rgba(0, 0, 0);
@@ -104,7 +102,7 @@
 .hero_right_tab_bg {
   position: absolute;
   inset: 0;
-  z-index: 0;
+  z-index: 1;
   background: radial-gradient(circle at 10% 20%, #991fff 30%, rgb(58, 58, 58));
 }
 
@@ -125,16 +123,13 @@
 .hero_center::after {
   content: "";
   position: absolute;
-  width: 100%;
-  height: 100%;
   inset: 0;
   background: url("../assets/multicolored-1.jpg");
-  z-index: -4;
+  z-index: -2;
   background-repeat: no-repeat;
   background-size: 900px 600px;
   margin: auto;
-  background-position-y: 60%;
-  background-position-x: 60%;
+  background-position: 60%;
   mix-blend-mode: multiply;
 }
 
@@ -144,10 +139,11 @@
   z-index: -9;
   inset: 20% 0 0 0;
   filter: blur(100px);
-  background: radial-gradient(
-    circle at 60% 50%,
-    rgb(0, 0, 0, 0.3) 20%,
-    transparent
+  background: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.4),
+    rgba(0, 0, 0, 0.2)
   );
 }
 
@@ -216,14 +212,17 @@
   .hero_center::after {
     inset: 0 0 0 20px;
     background-size: cover;
-    background-position-x: calc(100vw - 400px);
-    background-position-y: 50%;
+    background-position-x: calc(10vw - 10%);
   }
 
   .hero_center::before {
     inset: 0;
     filter: blur(100px);
-    background: linear-gradient(to right, transparent 50%, rgb(0, 0, 0, 0.9));
+    background: linear-gradient(
+      to right,
+      transparent 0%,
+      rgb(0, 0, 0, 0.7) 70%
+    );
   }
 
   .hero {
@@ -247,7 +246,6 @@
   }
 
   .hero_right_tab {
-    max-width: 150px;
     width: 100%;
   }
 
@@ -295,7 +293,6 @@
 
 @media screen and (max-width: 576px) {
   .hero_right span {
-    font-size: 13px;
     left: 8px;
   }
 
@@ -331,6 +328,5 @@
   .hero_right,
   .hero_right h3 {
     padding: 0;
-    font-size: 16px;
   }
 }
