--- a/client/src/styles/landing.css
+++ b/client/src/styles/landing.css
@@ -1,5 +1,4 @@
 .landing {
-  height: 100vh;
   background: linear-gradient(60deg, #f4f0ed 0%, #e0dcd9, #f4f0ed 100%);
 }
 
@@ -110,10 +109,7 @@
   position: absolute !important;
   width: 100%;
   height: 100%;
-  left: 65px;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  inset: 0;
   margin: auto;
   z-index: -3;
   position: relative;
@@ -149,7 +145,11 @@
 
 .hero_center_image_div {
   position: relative;
-  left: 30px;
+}
+
+.hero_center_image_div svg {
+  position: relative;
+  left: 60px;
 }
 
 .hero_center_image_div,
@@ -164,7 +164,7 @@
 .hero_center_backdrop_container {
   position: absolute !important;
   width: 70%;
-  left: 100px;
+  left: 150px;
   max-height: 363px;
   right: 0;
   top: 0;
@@ -200,7 +200,11 @@
   }
 
   .hero_center_backdrop_container {
-    left: 50px;
+    left: 120px;
+  }
+
+  .hero_center_image_div svg {
+    left: 30px;
   }
 }
 
@@ -223,6 +227,10 @@
       transparent 0%,
       rgb(0, 0, 0, 0.7) 70%
     );
+  }
+
+  .hero_center_image_div svg {
+    left: 0px;
   }
 
   .hero {
